Fixed navbar stretch

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -10,3 +10,8 @@ video {
 
 body {
 }
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
